# prodaq_lib

./: .gitmodules  CMakeLists.txt
prodaq_app/: CMakeLists.txt
prodaq_app/example/: prodaq_app_bin.c
prodaq_app/include/: prodaq_app.h  prodaq_device.h  prodaq_hardware.h  prodaq_protocol.h
prodaq_app/src/: prodaq_app.c
prodaq_app/src/fm/: prodaq_device.c  prodaq_hardware.c  prodaq_protocol.c
prodaq_app/src/ino/: prodaq_device.cpp  prodaq_hardware.cpp  prodaq_protocol.cpp
prodaq_config/: .gitmodules  CMakeLists.txt
prodaq_config/include/: prodaq_config.h  prodaq_err.h  prodaq_fm.h  prodaq_json.h  prodaq_json.md  prodaq_message.h  prodaq_message_data.h  prodaq_request.h  prodaq_response.h
prodaq_config/include/device/: datalogger_config.h  device_config.h  device_message.h  gateway_config.h  sensor_config.h
prodaq_config/include/hardware/: ethernet_config.h  hardware_config.h  hardware_info.h  hardware_message.h  ip_config.h  uart_config.h  wifi_config.h
prodaq_config/include/info/: hardware_info.h  info_data.h  info_message.h  software_info.h
prodaq_config/include/network/: network_status.h  tcp_status.h  wifi_status.h
prodaq_config/include/protocol/: http_auth_config.h  http_config.h  mqtt_config.h  ntp_config.h  protocol_config.h  protocol_message.h
prodaq_config/include/status/: ble_status.h  network_status.h  status_data.h  status_message.h  tcp_status.h  wifi_status.h
prodaq_config/src/: prodaq_fm.c  prodaq_fm_ino.cpp  prodaq_message.c  prodaq_message_data.c  prodaq_request.c  prodaq_response.c
prodaq_config/src/device/: datalogger_config.c  device_config.c  device_message.c  gateway_config.c  sensor_config.c
prodaq_config/src/hardware/: ethernet_config.c  hardware_config.c  hardware_info.c  hardware_message.c  ip_config.c  uart_config.c  wifi_config.c
prodaq_config/src/info/: hardware_info.c  info_data.c  info_message.c  software_info.c
prodaq_config/src/network/: tcp_status.c
prodaq_config/src/protocol/: http_auth_config.c  http_config.c  mqtt_config.c  ntp_config.c  protocol_config.c  protocol_message.c
prodaq_config/src/status/: ble_status.c  network_status.c  status_data.c  status_message.c  tcp_status.c  wifi_status.c
prodaq_config/test/: CMakeLists.txt
prodaq_config/test/include/: device_mocks.h  device_tests.h  hardware_mocks.h  hardware_tests.h  json.h  network_mocks.h  network_tests.h  prodaq_mocks.h  prodaq_tests.h  protocol_mocks.h  protocol_tests.h  status_mocks.h
prodaq_config/test/json/: request_data.json  request_message.json  response_data.json  response_message.json
prodaq_config/test/json/device/: datalogger_config.json  datalogger_message.json  datalogger_message_data.json  gateway_config.json  gateway_message.json  gateway_message_data.json  sensor_config.json  sensor_message.json  sensor_message_data.json
prodaq_config/test/json/hardware/: ethernet_config.json  ethernet_message.json  ethernet_message_data.json  ip_config.json  uart_config.json  uart_message.json  uart_message_data.json  wifi_config.json  wifi_message.json  wifi_message_data.json
prodaq_config/test/json/network/: network_status.json
prodaq_config/test/json/protocol/: http_auth_config.json  http_config.json  http_message.json  http_message_data.json  mqtt_config.json  mqtt_message.json  mqtt_message_data.json  ntp_config.json  ntp_message.json  ntp_message_data.json
prodaq_config/test/json/status/: ble_status.json  tcp_status.json  wifi_status.json
prodaq_config/test/src/: json.c  main.c  prodaq_fm_test.c  prodaq_message_data_test.c  prodaq_message_test.c  prodaq_request_test.c  prodaq_response_test.c
prodaq_config/test/src/device/: datalogger_config_test.c  device_config_test.c  device_message_test.c  gateway_config_test.c  sensor_config_test.c
prodaq_config/test/src/hardware/: ethernet_config_test.c  hardware_config_test.c  hardware_message_test.c  ip_config_test.c  uart_config_test.c  wifi_config_test.c
prodaq_config/test/src/network/: ble_status_test.c  tcp_status_test.c  wifi_status_test.c
prodaq_config/test/src/protocol/: http_auth_config_test.c  http_config_test.c  mqtt_config_test.c  ntp_config_test.c  protocol_config_test.c  protocol_message_test.c
prodaq_config/test/src/status/: ble_status_test.c  network_status_test.c  tcp_status_test.c  wifi_status_test.c
prodaq_server/: CMakeLists.txt
prodaq_server/examples/: prodaq_server_win.c
prodaq_server/include/: prodaq_http.h  prodaq_server.h
prodaq_server/src/: prodaq_http.c
prodaq_server/src/ino/: prodaq_server.cpp
prodaq_server/src/win/: prodaq_server.c
prodaq_server/test/: CMakeLists.txt
prodaq_server/test/include/: prodaq_http_test.h
prodaq_server/test/src/: main.c  prodaq_http_test.c
prodaq_server/test/src/pc/: prodaq_server_test.c
